# QBase_v2

./: CLAUDE.md  README.md  conftest.py  pyproject.toml  todo.md
attribution/: __init__.py  baseline.py  coverage.py  decay.py  horizon.py  operational.py  regime.py  report.py  signal.py
config/: __init__.py  fundamental_views.yaml  regime_thresholds.yaml  settings.yaml
data/regime_labels/: I.yaml
docs/: DEVELOPMENT_WORKFLOW.md  STRATEGY_GUIDE.md  architecture.md
indicators/: __init__.py  _utils.py  indicators.md
monitoring/: __init__.py  dashboard.py  decay_detector.py  regime_alert.py  retirement.py
optimizer/: __init__.py  config.py  core.py  param_discovery.py  regime_optimizer.py  robustness.py  trial_registry.py
pipeline/: __main__.py  backtest_runner.py  cli.py  dev_pipeline.py  runner.py
portfolio/: __init__.py  constraints.py  rebalance.py  regime_allocator.py  retirement.py  scorer.py  selection.py  signal_blender.py  stops.py  weights.py
regime/: __init__.py  labeler.py  matcher.py  schema.py
risk/: __init__.py  chandelier.py  directional_filter.py  portfolio_stops.py  position_sizer.py  vol_classifier.py  vol_targeting.py
scripts/: batch_optimize_all.py  run_group.py
tests/: test_attribution.py  test_config.py  test_monitoring.py  test_optimizer.py  test_pipeline.py  test_portfolio.py  test_regime.py  test_risk.py  test_strategies.py  test_validation.py
validation/: __init__.py  deflated_sharpe.py  industrial_check.py  monte_carlo.py  oos_validator.py  permutation_test.py  pipeline.py  regime_cv.py  stress_test.py  walk_forward.py
(+359 files in other folders)
