[project]
name = "qbase-v2"
version = "0.1.0"
description = "Black series Chinese futures single-instrument multi-strategy trading system"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "optuna>=3.0",
    "scikit-learn>=1.2",
    "pyyaml>=6.0",
    "plotly>=5.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
